[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
num = "0.4.1"
pathfinding = "4.6.0"
rayon = "1.8.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
# opt-level = 3